--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>kamraKamri | Home</title>
 </head>
 <body>
+    <h1>I am a Programmer</h1>
+    <p>I wanna a be a software engineer and get a job software industry, and also i dreampt i wanna go canada for my masters Programme.</p>
     
 </body>
 </html>
