--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
     <h1>I am a Programmer</h1>
     <p>I wanna a be a software engineer and get a job software industry, and also i dreampt i wanna go canada for my masters Programme.</p>
+
+    <img src="love.webp" alt="">
     
 </body>
 </html>
