--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <p>I wanna a be a software engineer and get a job software industry, and also i dreampt i wanna go canada for my masters Programme.</p>
 
     <img src="love.webp" alt="">
+
+    <a href="#">Google Mama</a>
     
 </body>
 </html>
